--- a/camera/package.json
+++ b/camera/package.json
@@ -27,6 +27,8 @@
     "electron-updater": "^6.1.7",
     "element-plus": "^2.7.5",
     "postcss": "^8.4.38",
+    "sass": "^1.77.6",
+    "scss": "^0.2.4",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
