--- a/camera/package.json
+++ b/camera/package.json
@@ -35,6 +35,7 @@
     "@electron-toolkit/eslint-config": "^1.0.2",
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@icon-park/vue-next": "^1.4.2",
     "@rushstack/eslint-patch": "^1.7.1",
     "@types/node": "^18.19.9",
     "@vitejs/plugin-vue": "^5.0.3",
