--- a/snippets/electron-builder.yml
+++ b/snippets/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.wjbbb.camera
-productName: 摸鱼摄像头
+appId: com.electron.app
+productName: snippets
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: camera
+  executableName: snippets
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
