--- a/snippets/tsconfig.web.json
+++ b/snippets/tsconfig.web.json
@@ -3,17 +3,17 @@
   "include": [
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
-    "src/renderer/src/**/*.vue",
-    "src/renderer/src/components/*.vue",
+    "src/renderer/src/**/*.tsx",
     "src/preload/*.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
       ]
-    },
+    }
   }
 }
