--- a/snippets/package.json
+++ b/snippets/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "classnames": "^2.5.1",
     "electron-updater": "^6.1.7"
   },
   "devDependencies": {
