--- a/snippets/package.json
+++ b/snippets/package.json
@@ -25,7 +25,9 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@icon-park/react": "^1.4.2",
     "@remix-run/router": "^1.16.1",
+    "@types/better-sqlite3": "^7.6.10",
     "antd": "^5.18.3",
+    "better-sqlite3": "^11.0.0",
     "classnames": "^2.5.1",
     "electron-updater": "^6.1.7",
     "react-router-dom": "6",
