--- a/snippets/package.json
+++ b/snippets/package.json
@@ -30,6 +30,7 @@
     "antd": "^5.18.3",
     "better-sqlite3": "^11.0.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "electron-updater": "^6.1.7",
     "mockjs": "^1.1.0",
     "react-router-dom": "6",
