片断：安装右键菜单插件

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -24,14 +24,18 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "@icon-park/react": "^1.4.2",
+    "@mantine/core": "^7.11.0",
+    "@mantine/hooks": "^7.11.0",
     "@remix-run/router": "^1.16.1",
     "@types/better-sqlite3": "^7.6.10",
     "@types/mockjs": "^1.0.10",
     "antd": "^5.18.3",
     "better-sqlite3": "^11.0.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "electron-updater": "^6.1.7",
+    "mantine-contextmenu": "^7.10.2",
     "mockjs": "^1.1.0",
     "react-router-dom": "6",
     "zustand": "^4.5.2"
